--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,6 +86,17 @@
   border-bottom-left-radius: 5px;
 }
 
+.message-link {
+  color: #1565c0;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
+.message-link:hover {
+  color: #0d47a1;
+  text-decoration: none;
+}
+
 .message.ai .message-bubble.typing {
   font-style: italic;
   color: #999;
